# VSC_CPP_Template

./: CMakeLists.txt  LICENSE  README.md  build.sh
include/: HelloWorld.hpp
src/: main.cpp
